--- a/frontend/src/Components/pages/Company/EnterCompany.css
+++ b/frontend/src/Components/pages/Company/EnterCompany.css
@@ -16,3 +16,16 @@
   margin-left: 39%;
   width: 25%;
 }
+div.error {
+  padding: 10px;
+  padding-left: 85px;
+  background: #ffefef;
+  border: 1px solid var(--error);
+  color: red;
+  border-radius: 4px;
+  margin: 30px 0;
+  width: 350px;
+}
+input.error {
+  border: 1px solid var(--error);
+}
